--- a/chemical/templates/navbar.html
+++ b/chemical/templates/navbar.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'standards_list' %}">Standards</a>
+            <a class="nav-link" href="{% url 'standard_list' %}">Standards</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'part_list' %}">Parts</a>
